--- a/login.html
+++ b/login.html
@@ -143,48 +143,50 @@
 
     closePopup.onclick = () => popup.style.display = "none";
 
-    document.getElementById("loginBtn").addEventListener("click", async () => {
-      const email = document.getElementById("email").value.trim();
-      const pin = document.getElementById("pin").value.trim();
+    document.getElementById("loginForm").addEventListener("submit", async (e) => {
+  e.preventDefault();
 
-      if (!email || !pin) {
-        showPopup("⚠️ Missing Info", "Please enter both email and PIN.");
-        return;
-      }
+  const email = document.getElementById("email").value.trim();
+  const pin = document.getElementById("pin").value.trim();
 
-      showPopup("⏳ Verifying...", "Please wait a moment...", true);
+  if (!email || !pin) {
+    showPopup("⚠️ Missing Info", "Please enter both email and PIN.");
+    return;
+  }
 
-      try {
-        const params = new URLSearchParams({
-          action: "verifyPin",
-          key: SECRET_KEY,
-          email,
-          pin,
-          origin: window.location.origin
-        });
+  const formData = new URLSearchParams();
+  formData.append("action", "verifyPin");
+  formData.append("email", email);
+  formData.append("pin", pin);
+  formData.append("key", "v8YhT93NfZ2jP6mXcA7rL1kE5s");
+  formData.append("origin", window.location.origin);
 
-        const response = await fetch(SCRIPT_URL, { method: "POST", body: params });
-        const text = await response.text();
-
-        console.log("Response:", text);
-
-        if (text.includes("Success: Verified")) {
-          showPopup("✅ Login Successful", "Redirecting to your dashboard...", true);
-
-          localStorage.setItem("userEmail", email);
-
-          setTimeout(() => {
-            window.location.href = "dashboard.html";
-          }, 1800);
-        } else {
-          showPopup("❌ Login Failed", "Invalid email or PIN. Please try again.");
-        }
-
-      } catch (err) {
-        console.error(err);
-        showPopup("⚠️ Error", "Network error. Please try again later.");
-      }
+  try {
+    const response = await fetch("https://script.google.com/macros/s/AKfycbxEfT01mPoVxLiJwknxGz0fPQXeX6l5KO8BW407MSRWThWQU6kjHTizi6d4XuzLy1E/exec", {
+      method: "POST",
+      body: formData,
     });
+
+    const text = await response.text();
+    console.log("Server response:", text);
+
+    if (text.includes("Success: Verified")) {
+      localStorage.setItem("userEmail", email);
+
+      showPopup("✅ Login Successful", "Redirecting to your dashboard...", true);
+
+      setTimeout(() => {
+        window.location.href = "dashboard.html";
+      }, 1800);
+    } else {
+      showPopup("❌ Login Failed", "Invalid email or PIN. Please try again.");
+    }
+  } catch (error) {
+    showPopup("⚠️ Network Error", "Something went wrong. Please try again later.");
+    console.error(error);
+  }
+});
+
   </script>
 </body>
 </html>
