fix story mode button

--- a/dashboard.html
+++ b/dashboard.html
@@ -107,11 +107,11 @@
     }
 
     function goToCommunity() {
-      window.location.href = "community.html";
+      window.location.href = "https://samadrehman.github.io/Newsletter-/community.html";
     }
 
     function goToStory() {
-      window.location.href = "story.html";
+      window.location.href = "https://samadrehman.github.io/Newsletter-/story.html";
     }
   </script>
 </body>
