--- a/login.html
+++ b/login.html
@@ -176,7 +176,7 @@
       showPopup("✅ Login Successful", "Redirecting to your dashboard...", true);
 
       setTimeout(() => {
-        window.location.href = "dashboard.html";
+        window.location.href = "https://samadrehman.github.io/Newsletter-/dashboard.html";
       }, 1800);
     } else {
       showPopup("❌ Login Failed", "Invalid email or PIN. Please try again.");
