--- a/story.html
+++ b/story.html
@@ -13,29 +13,56 @@
 </div>
 
 <script>
-const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxEfT01mPoVxLiJwknxGz0fPQXeX6l5KO8BW407MSRWThWQU6kjHTizi6d4XuzLy1E/exec";
-const SECRET_KEY = "v8YhT93NfZ2jP6mXcA7rL1kE5s";
-function getFp(){ try{ return btoa(navigator.userAgent+"||"+screen.width+"x"+screen.height+"||"+Intl.DateTimeFormat().resolvedOptions().timeZone); }catch(e){return navigator.userAgent||"unk"} }
+document.addEventListener("DOMContentLoaded", () => {
+  const userEmail = localStorage.getItem("userEmail");
 
-document.getElementById('storyForm').addEventListener('submit', async function(ev){
-  ev.preventDefault();
-  const token = localStorage.getItem("authToken");
-  const email = localStorage.getItem("authEmail");
-  if(!token || !email) { alert("Please login first"); window.location.href='login.html'; return; }
-  const fd = new FormData(ev.target);
-  fd.append("action","submitStory");
-  fd.append("key", SECRET_KEY);
-  fd.append("ref", window.location.origin);
-  fd.append("fp", getFp());
-  fd.append("hp", "");
-  fd.append("token", token);
-  fd.append("email", email);
-  try{
-    const r = await fetch(SCRIPT_URL, { method:"POST", body: fd });
-    const text = await r.text();
-    alert(text);
-    if(text.includes("Success")) ev.target.reset();
-  }catch(err){ alert("Network error"); }
+  if (!userEmail) {
+    alert("Please login first");
+    window.location.href = "login.html";
+    return;
+  }
+
+  // ✅ show email confirmation
+  document.getElementById("welcomeText").textContent = `Welcome, ${userEmail}!`;
+
+  // ✅ handle story posting
+  const postBtn = document.getElementById("postBtn");
+  postBtn.addEventListener("click", async () => {
+    const story = document.getElementById("storyInput").value.trim();
+    if (!story) {
+      alert("Please write something before posting!");
+      return;
+    }
+
+    const formData = new URLSearchParams();
+    formData.append("action", "addStory");
+    formData.append("email", userEmail);
+    formData.append("story", story);
+    formData.append("key", "v8YhT93NfZ2jP6mXcA7rL1kE5s");
+    formData.append("origin", window.location.origin);
+
+    try {
+      const response = await fetch("https://script.google.com/macros/s/AKfycbxEfT01mPoVxLiJwknxGz0fPQXeX6l5KO8BW407MSRWThWQU6kjHTizi6d4XuzLy1E/exec", {
+        method: "POST",
+        body: formData
+      });
+
+      const text = await response.text();
+      console.log("Server response:", text);
+
+      if (text.includes("Success: Story Added")) {
+        alert("✅ Story posted successfully!");
+        document.getElementById("storyInput").value = "";
+      } else {
+        alert("❌ Failed to post. Please try again.");
+      }
+    } catch (err) {
+      console.error(err);
+      alert("⚠️ Network error. Please try again later.");
+    }
+  });
 });
+</script>
+
 </script>
 </body></html>
